canvas confetti was buggy on prod, moved to cdn

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -35,6 +35,7 @@
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     <div id="root"></div>
     <script type="module" src="/main.js"></script>
     <!--
