--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css?family=Material+Icons&display=block"
       rel="stylesheet"
     />
-    <link href="index.css" rel="stylesheet" />
+    <link href="/index.css" rel="stylesheet" />
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
